FIXED v2 - cards overflow hidden

--- a/src/view/css/style.css
+++ b/src/view/css/style.css
@@ -74,6 +74,7 @@ max-height: 656px;
 .blackDotDiv {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 .personOne > .blackDot {
     /* Marco */
@@ -117,7 +118,7 @@ max-height: 656px;
         opacity: 0.7;
     }
     100% {
-        margin-left: 7.5%;
+        margin-left: 15%;
         top: 50%;
 
         opacity: 1;
@@ -171,7 +172,7 @@ max-height: 656px;
         opacity: 0.7;
     }
     100% {
-        margin-left: 67%;
+        margin-left: 45%;
         top: 50%;
 
         opacity: 1;
